Add: Google Adsense

--- a/_includes/my-head.html
+++ b/_includes/my-head.html
@@ -3,6 +3,8 @@ Code used for embedding Gumroad on the Hydejack Site.
 Left here for reference, feel free to delete.
 -->
 <link rel="dns-prefetch" href="https://assets.gumroad.com">
+<!-- Adsense by xiaosean 20210526 -->
+<script data-ad-client="ca-pub-5990844965346235" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>window.GET_CLAPS_API = 'https://worker.getclaps.dev'</script>
 <script type="module">
   const ppiData = window._ppiData = fetch('https://hydejack-ppi.qwtel.workers.dev', { mode: 'cors'}).then(res => res.json()).catch(() => ({}));
