Updated: Leo GA tag

--- a/_includes/my-head.html
+++ b/_includes/my-head.html
@@ -6,6 +6,15 @@ Left here for reference, feel free to delete.
 <!-- Adsense by xiaosean 20210526 -->
 <script data-ad-client="ca-pub-5990844965346235" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>window.GET_CLAPS_API = 'https://worker.getclaps.dev'</script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-99TTPB3TQ3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-99TTPB3TQ3');
+</script>
 <script type="module">
   const ppiData = window._ppiData = fetch('https://hydejack-ppi.qwtel.workers.dev', { mode: 'cors'}).then(res => res.json()).catch(() => ({}));
   const promisify = f => x => new Promise(r => f(x).addEventListener('load', r));
